fixed bugs and added animation

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -24,7 +24,7 @@
           dignissimos numquam fuga nulla quia voluptatibus, dolore voluptate excepturi accusantium dolores temporibus fugit,
           voluptas velit omnis!</p>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 animated zoomIn">
         <img src="../../assets/about/cleaner.jpg" alt="" class="about-img img-fluid rounded-circle d-none d-md-block">
       </div>
     </div>
