--- a/src/app/career/career.component.html
+++ b/src/app/career/career.component.html
@@ -174,7 +174,7 @@
                 
                 <h3>Why Join Us</h3>
                 <br>
-                  <img src="../../assets/cleaner2.jpg" class="img-fluid" alt="">
+                  <img src="../../assets/cleaner2.jpg" class="img-fluid animated flipInX" alt="">
                 <br><br><br>
                 <p>Join the booming home service industry and work in nice family homes helping busy professional couples, time poor families
                 and the elderly with their housework. It’s what we do in our own homes every day. The only difference is that you get paid
