--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,7 +25,7 @@
             <h1 class="display-3">Let Us Clean Your House</h1>
             <p class="lead">We offer regular internal and external cleaning and gardening services, occasional full house cleans as well as bond cleans
             and commercial cleaning.</p>
-            <a href="#" class="btn btn-primary btn-lg">Learn More</a>
+            <a routerLink="/about" class="btn btn-primary btn-lg">Learn More</a>
           </div>
         </div>
       </div>
@@ -36,7 +36,7 @@
             <h1 class="display-3">Affordable Price</h1>
             <p class="lead">Your choice of services can be selected using an hourly pricing structure or customising your needs to one of our cost-conscious
             packages.</p>
-            <a href="#" class="btn btn-success btn-lg">Learn More</a>
+            <a routerLink="/about" class="btn btn-success btn-lg">Learn More</a>
           </div>
         </div>
       </div>
@@ -100,8 +100,8 @@
             insured so you can have peace of mind while we endeavour to keep your home clean and well maintained.</p>
             <a href="/about" class="btn btn-outline-danger btn-lg">Learn More</a>
           </div>
-          <div class="col-md-6">
-            <img src="../../assets/staff.png" class="img-fluid" alt="">
+          <div class="col-md-6"  data-aos="fade-right" data-aos-easing="linear" data-aos-duration="1500">
+            <img  src="../../assets/staff.png" class="img-fluid" alt="">
           </div>
         </div>
       </div>
@@ -113,7 +113,7 @@
       <div class="row">
         <div class="col">
           <div class="container p-5">
-            <a href="#" class="video" data-video='https://www.youtube.com/watch?v=rdHZG7XbpBc' data-toggle="modal" data-target="#videoModal">
+            <a href="#" class="video" data-video='' data-toggle="modal" data-target="#videoModal">
               <i class="fa fa-play"></i>
             </a>
             <h1>See What We Do</h1>
@@ -144,7 +144,7 @@
         <br><br>
         <div class="why-us">
     <div class="row mb-4">
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="flip-left" data-aos-easing="linear" data-aos-duration="1500">
             <div class="card text-white  mb-3" style="max-width: 18rem;">
               <div class="card-header bg-primary"><h5 class="card-title">Afordable</h5></div>
               <div class="card-body">   
@@ -153,7 +153,7 @@
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="flip-right" data-aos-easing="linear" data-aos-duration="1500">
             <div class="card text-white  mb-3" style="max-width: 18rem;">
               <div class="card-header bg-secondary"><h5 class="card-title">Cleaner/client relationship</h5></div>
               <div class="card-body">   
@@ -162,7 +162,7 @@
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="flip-left" data-aos-easing="linear" data-aos-duration="1500">
             <div class="card text-white  mb-3" style="max-width: 18rem;">
               <div class="card-header bg-success">
                 <h5 class="card-title">Friendly and Trustworthy</h5>
@@ -179,7 +179,7 @@
     
         <div class="row mb-4">
 
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="flip-right" data-aos-easing="linear" data-aos-duration="1500">
             <div class="card text-white  mb-3" style="max-width: 18rem;">
               <div class="card-header bg-danger">
                 <h5 class="card-title">Police Checked</h5>
@@ -192,7 +192,7 @@
             </div>
           </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4" data-aos="flip-left" data-aos-easing="linear" data-aos-duration="1500">
               <div class="card text-white  mb-3" style="max-width: 18rem;">
                 <div class="card-header bg-warning">
                   <h5 class="card-title">Comprehensively trained</h5>
@@ -204,7 +204,7 @@
                 </div>
               </div>
             </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="flip-right" data-aos-easing="linear" data-aos-duration="1500">
             <div class="card text-white  mb-3" style="max-width: 18rem;">
               <div class="card-header bg-info">
                 <h5 class="card-title">The best in the business!</h5>
