--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,9 +1,9 @@
 <header id="showcase">
-  <div class="container">
+  <div class="container animated bounceInLeft">
     <mat-card id="card">
       <mat-card-content>
     
-        <div class="header-content">
+        <div class="header-content " >
           <mat-card id="card-title">
             <mat-card-title>
               <h1>
