--- a/src/app/booking/booking.component.css
+++ b/src/app/booking/booking.component.css
@@ -51,9 +51,9 @@
   @media(max-width:786px)
 {
   
-  .dark-overlay{
+  /* .dark-overlay{
     margin-top: -9vh;
-  }
+  } */
 
   .btn{
     width:50vh;
