--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -19,9 +19,10 @@
     width: 50vh;
 } */
 #top{
-    margin-top:0;
+    margin-top:7vh;
     background-image:none;
 }
+
 }
 
 
@@ -35,6 +36,7 @@
   left: 0;
   right: 0;
 }
+
 
 .example-is-mobile .example-toolbar {
   position: fixed;
