--- a/src/app/display-bookings/display-bookings.component.css
+++ b/src/app/display-bookings/display-bookings.component.css
@@ -22,8 +22,10 @@
     width: 50vh;
 } */
 #top{
-    margin-top:0;
+    margin-top:7vh;
+    background-image:none;
 }
+
 }
 
 
@@ -36,6 +38,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+ 
 }
 
 .example-is-mobile .example-toolbar {
