--- a/src/app/messages/messages.component.css
+++ b/src/app/messages/messages.component.css
@@ -21,8 +21,31 @@
     width: 50vh;
 } */
 #top{
-    margin-top:0;
+    margin-top:7vh;
+    background-image:none;
 }
+}
+
+@media (max-width: 786px){
+nav {
+    background: rgba(0,0,0,.0);
+}
+
+nav{
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 20px;
+    padding: 10px 100px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition: .5s;
+    transition: .5s;
+    background: rgba(0,0,0,.4);
+    z-index: 4;
+}
+
+
 }
 
 
