--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -112,20 +112,22 @@ nav ul li a:hover{
 nav{
 
   background: rgba(0,0,0,.0);
-  
+  height: 20px; 
 }
+
   .responsive-bar
   {
     display: block;
     width: 100%;
     height: 60px;
     background: #262626;
-    /* position: fixed; */
+    position: fixed; 
     top: 0;
     left: 0;
     padding: 5px 20px;
     box-sizing: border-box;
-    /* z-index: 4; */
+     z-index: 5;  
+
   }
 
   .responsive-bar .logo a
@@ -157,9 +159,9 @@ nav{
      color: #fff;
    }
    nav ul{
-     position: absolute;
+     position: fixed;
      width: 100%;
-     top: -10px;
+     top: 7vh;
      left: 0;
      background: #262626;
      float: none;
@@ -183,4 +185,5 @@ nav{
       background: #262626;
    }
 }
+
 
