--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -2,7 +2,6 @@
   <div class="container animated bounceInLeft">
     <mat-card id="card">
       <mat-card-content>
-    
         <div class="header-content " >
           <mat-card id="card-title">
             <mat-card-title>
@@ -13,6 +12,7 @@
           </mat-card>
           <hr>
           <mat-card id="card-content">
+            <!-- Forms -->
             <form class="form" (submit)="onSubmit()">
               <p>
                 <mat-form-field class="example-full-width items">
@@ -38,20 +38,15 @@
                 </mat-form-field>
               </p>
               <br>
-          
               <div class="row">
                 <div class="buttons">
                   <button mat-raised-button color="primary" class="btn" id="submitBtn">Sign In</button>
                 </div>
               </div>
-
-    
             </form>
-
           </mat-card>
         </div>
       </mat-card-content>
     </mat-card>
-
   </div>
 </header>
