--- a/src/app/cleaning/cleaning.component.html
+++ b/src/app/cleaning/cleaning.component.html
@@ -35,16 +35,15 @@
   </div>
 </section>
 
-
-
-<div class="card-group" >
-  <div  class="card text-white bg-secondary">
-    <img  class="card-img-top" src="../../assets/image1.jpg" alt="Card image cap">
+<div class="card-group">
+  <div class="card text-white bg-secondary">
+    <img class="card-img-top" src="../../assets/image1.jpg" alt="Card image cap">
     <div class="card-body">
       <h1 class="card-title">General Cleaning</h1>
       <p class="card-text">Expect an exceptional clean of your home when one or two of our trained team members arrive on time to your appointment.
-      Whether it be a bathroom, kitchen, lounge room or a full house clean we are willing to assist you with all jobs big or small.
-      We will supply all the cleaning products and equipment necessary for the job. All our services can be bundled into packages.</p>
+        Whether it be a bathroom, kitchen, lounge room or a full house clean we are willing to assist you with all jobs big
+        or small. We will supply all the cleaning products and equipment necessary for the job. All our services can be bundled
+        into packages.</p>
       <h3>Services we offer:</h3>
       <ul>
         <li>Vacuuming of hard floor and carpets</li>
@@ -70,11 +69,12 @@
     <img class="card-img-top" src="../../assets/image2.jpg" alt="Card image cap">
     <div class="card-body">
       <h1 class="card-title">Specialised Cleaning</h1>
-      <p class="card-text">Take control of your irregular housework responsibilities that are time consuming and often put off. S & A Domestic staff
-      will arrive prepared to put in the extra effort to get the difficult work completed. We offer specialised cleans to all areas
-      of the house and bring along all the equipment and products. We can remove all items in your cupboards, pantry or fridge,
-      clean the area and put your belongings back in, get up to those high reach areas to de-cobweb and dust scrub your oven or
-      give your walls a deep clean. Pricing begins at $40 per hour however all services require a free quote.</p>
+      <p class="card-text">Take control of your irregular housework responsibilities that are time consuming and often put off. S & A Domestic
+        staff will arrive prepared to put in the extra effort to get the difficult work completed. We offer specialised cleans
+        to all areas of the house and bring along all the equipment and products. We can remove all items in your cupboards,
+        pantry or fridge, clean the area and put your belongings back in, get up to those high reach areas to de-cobweb and
+        dust scrub your oven or give your walls a deep clean. Pricing begins at $40 per hour however all services require
+        a free quote.</p>
       <h3>Services we offer:</h3>
       <ul>
         <li>End of lease cleaning</li>
@@ -93,37 +93,37 @@
     </div>
   </div>
   <div class="card text-white bg-dark">
-    <img class="card-img-top" src="../../assets/cleaning/ironing.jpg"alt="Card image cap">
+    <img class="card-img-top" src="../../assets/cleaning/ironing.jpg" alt="Card image cap">
     <div class="card-body">
-        <h1 class="card-title">Ironing</h1>
-        <p class="card-text">We offer professional ironing services that can save you time and effort better put to more important things in life. Our
-        steam iron leaves your clothes free of wrinkles and creases creating crisp business shirts, soft every day wear and eye-catching
-        formalwear. We take the greatest care when ironing your clothes to ensure they remain in the same condition as when we started.
-        We offer in home ironing if packaged with a general household clean or specialised household clean. Alternatively, we can
-        pick up your laundry items ready to be ironed and deliver them back to you once completed. Supply of coat hangers is optional
-        however if coat hangers are not supplied a fee will apply so we can provide them. Enquire about our ironing service.</p>
-        <h3>Ironing Prices:</h3>
-        <ul>
-          <li>$1.50 per item of clothing</li>
-          <li>$21.00 additional if pick up and drop off required</li>
-          <li>$0.50 per plastic coat hanger</li>
-          <li>$1.00 per wooden coat hanger</li>
-        </ul>
+      <h1 class="card-title">Ironing</h1>
+      <p class="card-text">We offer professional ironing services that can save you time and effort better put to more important things in life.
+        Our steam iron leaves your clothes free of wrinkles and creases creating crisp business shirts, soft every day wear
+        and eye-catching formalwear. We take the greatest care when ironing your clothes to ensure they remain in the same
+        condition as when we started. We offer in home ironing if packaged with a general household clean or specialised
+        household clean. Alternatively, we can pick up your laundry items ready to be ironed and deliver them back to you
+        once completed. Supply of coat hangers is optional however if coat hangers are not supplied a fee will apply so we
+        can provide them. Enquire about our ironing service.</p>
+      <h3>Ironing Prices:</h3>
+      <ul>
+        <li>$1.50 per item of clothing</li>
+        <li>$21.00 additional if pick up and drop off required</li>
+        <li>$0.50 per plastic coat hanger</li>
+        <li>$1.00 per wooden coat hanger</li>
+      </ul>
     </div>
   </div>
 </div>
-
-  <br>
-  
+<br>
 <div class="card-group">
   <div class="card text-white bg-primary">
     <img class="card-img-top" src="../../assets/cleaning/mowing.jpg" alt="Card image cap">
     <div class="card-body  ">
       <h1 class="card-title">Lawn Mowing & Gardening Care</h1>
-      <p class="card-text">Utilising good quality equipment S & A Domestic can provide you with well-groomed lawns, hedges, flower beds, small trees
-      and bushes. Whether you require a regular weekly, fortnightly or monthly service we can package your requirements suited
-      to your garden. If your lawn isn’t looking its best, we can implement a lawn maintenance program to lush your lawn back to
-      a healthy green soft state. All equipment is carried with us and we will remove any clippings from your garden.</p>
+      <p class="card-text">Utilising good quality equipment S & A Domestic can provide you with well-groomed lawns, hedges, flower beds, small
+        trees and bushes. Whether you require a regular weekly, fortnightly or monthly service we can package your requirements
+        suited to your garden. If your lawn isn’t looking its best, we can implement a lawn maintenance program to lush your
+        lawn back to a healthy green soft state. All equipment is carried with us and we will remove any clippings from your
+        garden.</p>
       <h3>Services include:</h3>
       <ul>
         <li>Full lawn mowing</li>
@@ -142,10 +142,10 @@
     <img class="card-img-top" src="../../assets/cleaning/pressure.jpg" alt="Card image cap">
     <div class="card-body">
       <h1 class="card-title">High Pressure Cleaning</h1>
-      <p class="card-text">Let us make a difference to the appearance of your property by removing excess grime and accumulated build up on your driveway,
-      exterior house, garden walls and fences. All services require a free quote before we can start which means we will drop in
-      and speak with you personally about the service or if you don’t have the time we can get your details and an in depth description
-      over the phone.</p>
+      <p class="card-text">Let us make a difference to the appearance of your property by removing excess grime and accumulated build up on your
+        driveway, exterior house, garden walls and fences. All services require a free quote before we can start which means
+        we will drop in and speak with you personally about the service or if you don’t have the time we can get your details
+        and an in depth description over the phone.</p>
       <h3>Services include:</h3>
       <ul>
         <li>High pressure water cleaning</li>
@@ -160,9 +160,10 @@
     <img class="card-img-top" src="../../assets/cleaning/car.jpg" alt="Card image cap">
     <div class="card-body">
       <h1 class="card-title">Carwashing</h1>
-      <p class="card-text">At S & A Domestic we can come to you to clean your car. Choose from a Standard wash, Deluxe wash or a full Internal & External
-      Detail to suit your requirements. Prices vary depending on the size of your vehicle – small, medium or large and start from
-      $25 per hour. All equipment is provided however access is required to an outdoor tap. Enquire about your car wash.</p>
+      <p class="card-text">At S & A Domestic we can come to you to clean your car. Choose from a Standard wash, Deluxe wash or a full Internal
+        & External Detail to suit your requirements. Prices vary depending on the size of your vehicle – small, medium or
+        large and start from $25 per hour. All equipment is provided however access is required to an outdoor tap. Enquire
+        about your car wash.</p>
       <h3>Standard Wash Includes:</h3>
       <ul>
         <li>Exterior Shampoo</li>
@@ -172,7 +173,6 @@
         <li>Mirrors cleaned</li>
         <li>Windows polished</li>
       </ul>
-
       <h3>Deluxe Wash Includes:</h3>
       <ul>
         <li>Exterior Shampoo</li>
@@ -184,21 +184,20 @@
         <li>Centre console clean</li>
         <li>Door Seals Cleaned</li>
       </ul>
-
       <h3>Full Internal and External Detail Includes:</h3>
       <ul>
-          <li>Exterior Shampoo</li>
-          <li>Wax polish and Buff dry</li>
-          <li>Internal vacuum</li>
-          <li>Dash board clean</li>
-          <li>Mirrors cleaned</li>
-          <li>Windows polished</li>
-          <li>Centre console detail</li>
-          <li>Door Seals Cleaned</li>
-          <li>Carpet shampoo</li>
-          <li>Upholstery clean</li>
-          <li>Vacuum</li>
-          <li>Wheel clean</li>
+        <li>Exterior Shampoo</li>
+        <li>Wax polish and Buff dry</li>
+        <li>Internal vacuum</li>
+        <li>Dash board clean</li>
+        <li>Mirrors cleaned</li>
+        <li>Windows polished</li>
+        <li>Centre console detail</li>
+        <li>Door Seals Cleaned</li>
+        <li>Carpet shampoo</li>
+        <li>Upholstery clean</li>
+        <li>Vacuum</li>
+        <li>Wheel clean</li>
       </ul>
     </div>
   </div>
