--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,10 +1,11 @@
 footer#main-footer {
   background: #000;
-  color: #fff; }
+  color: #fff; 
+}
 
-  #call{
-      height: 5.5rem;
-      width: 20rem;
-      border-radius: 9vh;
-      font-size: 26px;
-  }
+#call{
+  height: 5.5rem;
+  width: 20rem;
+  border-radius: 9vh;
+  font-size: 26px;
+}
