--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,3 @@
-
 <mat-card id="top">
   <mat-card-content>
     <!-- sidenav -->
@@ -13,21 +12,23 @@
       <mat-sidenav-container class="example-sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 110 : 0">
         <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches" fixedTopGap="110">
           <mat-nav-list>
-            <!-- <a mat-list-item routerLink="." *ngFor="let nav of fillerNav">{{nav}}</a> -->
-            <a mat-list-item routerLink="/displayBookings" ><i class="fas fa-address-book"></i> &nbsp; Booking</a>
-            <a mat-list-item routerLink="/messages"><i class="far fa-envelope"></i> &nbsp;Messages</a>
-            <a mat-list-item routerLink="/dashboard"><i class="fas fa-inbox"></i> &nbsp; Career Inbox</a>
-            <a mat-list-item routerLink="/admin" (click)="onLogoutClick()"> <i class="fas fa-power-off"></i> &nbsp; Logout</a>
+            <a mat-list-item routerLink="/displayBookings">
+              <i class="fas fa-address-book"></i> &nbsp; Booking</a>
+            <a mat-list-item routerLink="/messages">
+              <i class="far fa-envelope"></i> &nbsp;Messages</a>
+            <a mat-list-item routerLink="/dashboard">
+              <i class="fas fa-inbox"></i> &nbsp; Career Inbox</a>
+            <a mat-list-item routerLink="/admin" (click)="onLogoutClick()">
+              <i class="fas fa-power-off"></i> &nbsp; Logout</a>
           </mat-nav-list>
         </mat-sidenav>
 
-        <mat-sidenav-content >
+        <mat-sidenav-content>
           <div class="card" *ngFor="let career of careers">
             <mat-card id="card-content">
               <h4 class="card-title">{{career.firstName}} {{career.lastName}}</h4>
               <div class="row">
                 <div class="col-md-3">
-          
                   <h6>
                     <b>Email: </b> {{career.email}}</h6>
                   <h6>
@@ -60,6 +61,5 @@
         </mat-sidenav-content>
       </mat-sidenav-container>
     </div>
-<!-- sidenav -->
   </mat-card-content>
 </mat-card>
