--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,25 +1,21 @@
 .carousel-item {
   height: 60vh; 
-
 }
-
 .carousel-image-1 {
   background: url("../../assets/image1.jpg");
-  background-size: cover; }
-
+  background-size: cover; 
+}
 .carousel-image-2 {
   background: url("../../assets/image2.jpg");
-  background-size: cover; }
-
+  background-size: cover; 
+}
 .carousel-image-3 {
   background: url("../../assets/image3.jpg");
-  background-size: cover; }
-
+  background-size: cover; 
+}
 .fa {
-  font-size: 55px; }
-
-
-
+  font-size: 55px; 
+}
 
 #home-heading {
   position: relative;
@@ -36,9 +32,9 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%; }
-
-  #video-play {
+  height: 100%; 
+}
+#video-play {
   position: relative;
   min-height: 200px;
   background: url("../../assets/image2.jpg");
@@ -46,8 +42,10 @@
   background-repeat: no-repeat;
   background-position: 0 -300px;
   text-align: center;
-  color: #fff; }
+  color: #fff; 
+}
   
-  #video-play a {
-  color: #fff; }
+#video-play a {
+  color: #fff; 
+}
 
