--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -8,15 +8,17 @@
         </button>
         <h1 class="example-app-name">Menu</h1>
       </mat-toolbar>
-
       <mat-sidenav-container class="example-sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 110 : 0">
         <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches" fixedTopGap="110">
           <mat-nav-list>
-            <!-- <a mat-list-item routerLink="." *ngFor="let nav of fillerNav">{{nav}}</a> -->
-            <a mat-list-item routerLink="/displayBookings"><i class="fas fa-address-book"></i> &nbsp;Booking</a>
-            <a mat-list-item routerLink="/messages"><i class="far fa-envelope"></i> &nbsp;Messages</a>
-            <a mat-list-item routerLink="/dashboard"><i class="fas fa-inbox"></i> &nbsp; Career Inbox</a>
-            <a mat-list-item routerLink="/admin" (click)="onLogoutClick()"><i class="fas fa-power-off"></i> &nbsp; Logout</a>
+            <a mat-list-item routerLink="/displayBookings">
+              <i class="fas fa-address-book"></i> &nbsp;Booking</a>
+            <a mat-list-item routerLink="/messages">
+              <i class="far fa-envelope"></i> &nbsp;Messages</a>
+            <a mat-list-item routerLink="/dashboard">
+              <i class="fas fa-inbox"></i> &nbsp; Career Inbox</a>
+            <a mat-list-item routerLink="/admin" (click)="onLogoutClick()">
+              <i class="fas fa-power-off"></i> &nbsp; Logout</a>
           </mat-nav-list>
         </mat-sidenav>
         <mat-sidenav-content>
@@ -25,13 +27,11 @@
               <h4 class="card-title">{{contact.firstName}} {{contact.lastName}}</h4>
               <div class="row">
                 <div class="col-md-5">
-          
                   <h6>
                     <b>Email: </b> {{contact.email}}</h6>
                   <h6>
                     <b>Phone: </b> {{contact.phone}}</h6>
                 </div>
-          
                 <div class="col-md-5">
                   <h6>
                     <b>Message:</b>
@@ -47,97 +47,5 @@
         </mat-sidenav-content>
       </mat-sidenav-container>
     </div>
-    <!-- sidenav -->
-
-    <!-- <mat-tab-group id="tabs">
-      <mat-tab label="Bookings" id="tab-item">
-          <br>
-            <div class="card" *ngFor="let booking of bookings">
-              <mat-card id="card-content"  >
-                <h4 class="card-title">{{booking.name}}</h4>
-                <div class="row">
-                  <div class="col-md-3">
-                    <h6> Date: {{booking.date | date:'dd MMM yyyy'}}</h6>
-                    <h6> <b>Address: </b> {{booking.address}}</h6>
-                    <h6> <b>Email: </b> {{booking.email}}</h6>
-                    <h6> <b>Phone: </b> {{booking.phone}}</h6>
-                  </div>
-                  <div class="col-md-3">
-                    <h6> <b>Bedroom: </b> {{booking.bedroom}}</h6>
-                    <h6> <b>Bathroom: </b> {{booking.bathroom}}</h6>
-                    <h6> <b>Service: </b> {{booking.service}}</h6>
-                  </div>
-                  <div class="col-md-4">
-                    <h6><b>Message:</b></h6>
-                   <h6>  {{booking.message}}</h6>
-                  </div>
-                    <div class="col-md-1">
-                        <button mat-raised-button color="warn" (click)="deleteBooking($event, booking)">Delete</button>
-                    </div>
-                </div>
-              </mat-card>
-            </div>
-
-      </mat-tab>
-
-
-      <mat-tab label="Messages">
-
-        <br>
-        <div class="card"  *ngFor="let contact of contacts">
-          <mat-card id="card-content">
-            <h4 class="card-title">{{contact.firstName}} {{contact.lastName}}</h4>
-            <div class="row">
-              <div class="col-md-5">
-  
-                <h6> <b>Email: </b> {{contact.email}}</h6>
-                <h6> <b>Phone: </b> {{contact.phone}}</h6>
-              </div>
- 
-              <div class="col-md-5">
-                <h6>
-                  <b>Message:</b>
-                </h6>
-                <h6> {{contact.message}}</h6>
-              </div>
-              <div class="col-md-1">
-                <button mat-raised-button color="warn" (click)="deleteContact($event, contact)">Delete</button>
-              </div>
-            </div>
-          </mat-card>
-        </div>
-      </mat-tab>
-      <mat-tab label="Career inbox">
-       <br>
-            <div class="card" *ngFor="let career of careers">
-              <mat-card id="card-content"  >
-                <h4 class="card-title">{{career.firstName}} {{career.lastName}}</h4>
-                <div class="row">
-                  <div class="col-md-3">
-                  
-                    <h6> <b>Email: </b> {{career.email}}</h6>
-                    <h6> <b>Phone: </b> {{career.phone}}</h6>
-                    <h6> <b>Experience: </b> {{career.experience}}</h6>
-                  </div>
-                  <div class="col-md-3">
-                    <h6> <b>Australian Licence: </b> {{career.licence}}</h6>
-                    <h6> <b>Car: </b> {{career.car}}</h6>
-                    <h6> <b>Blue Card: </b> {{career.blueCard}}</h6>
-                     <h6> <b>Police Check: </b> {{career.afp}}</h6>
-                  </div>
-                  <div class="col-md-4">
-                    <h6><b>Cover Letter:</b></h6>
-                   <h6>  {{career.coverLetter}}</h6>
-                  </div>
-                    <div class="col-md-1">
-                        <button mat-raised-button color="warn" (click)="deleteCareer($event, career)">Delete</button>
-                    </div>
-                </div>
-              </mat-card>
-            </div>
-
-
-      </mat-tab>
-    </mat-tab-group> -->
   </mat-card-content>
 </mat-card>
