--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,33 +1,28 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:700');
 
 #top{
-
   width: 100%;
   height: 100%;
 }
-
-/* logo top */
 #home-heading {
-
   min-height: 158px;
   background: url("../../assets/top-back.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   text-align: center;
-  color: #fff; }
-
+  color: #fff; 
+}
 .dark-overlay {
   position: absolute;
   background-color: rgba(33, 68, 75, 0.6);
-  /* background: url("../../assets/image2.jpg"); */
   top: 0;
   left: 0;
   width: 100%;
   height: 159px; 
 }
 .pt-5{
-    margin-top: -5vh;
-    display: flex;
+  margin-top: -5vh;
+  display: flex;
 }
 #top-logo{
  margin-top: -15vh;
@@ -38,10 +33,8 @@
     margin-left: 30vh;
      margin-top: 2vh;
 }
-
 nav{
   position: absolute;
-  /* top: 1vh; */
   left: 0;
   width: 100%;
   height: 50px;
@@ -51,11 +44,9 @@ nav{
   background: rgba(0,0,0,.4);
   z-index: 4;
 }
-
 nav .logo{
   float: left;
 }
-
 nav .logo a{
   transition: .9s;
   margin: 0;
@@ -71,7 +62,6 @@ nav ul{
 nav ul li{
   list-style:none;
 }
-
 nav ul a{
   list-style: 80px;
   color: #fff;
@@ -84,39 +74,25 @@ nav ul a{
 
 nav ul li a.active{
   color: #fff;
-  
-   background: #4bdfbf;
+  background: #4bdfbf;
 }
 nav ul li a:hover{
   color: #fff;
- background: #4bdfbf;
+  background: #4bdfbf;
 }
 .dropdown-menu{
-      background: rgba(0,0,0,.6);
+  background: rgba(0,0,0,.6);
 }
-/* nav.black{
-  background: rgba(0,0,0,.8);
-  height: 80px;
-  padding: 10px 50px;
-} */
-/* .container{
-
-  height: 50px;
-} */
-
 .responsive-bar{
   display: none;
 }
 @media(max-width:786px)
 {
-nav{
-
-  background: rgba(0,0,0,.0);
-  height: 20px; 
-}
-
-  .responsive-bar
-  {
+  nav{
+    background: rgba(0,0,0,.0);
+    height: 20px; 
+  }
+  .responsive-bar{
     display: block;
     width: 100%;
     height: 60px;
@@ -126,17 +102,14 @@ nav{
     left: 0;
     padding: 5px 20px;
     box-sizing: border-box;
-     z-index: 5;  
-
+    z-index: 5;  
   }
-
   .responsive-bar .logo a
   {
     float: left;
     height: 50px;
   }
-
-   .responsive-bar .menu h4
+  .responsive-bar .menu h4
    {
      float: right;
      color: #fff;
@@ -146,19 +119,16 @@ nav{
      cursor: pointer;
      text-transform: uppercase;
    }
-#home-heading{
+   #home-heading{
      display: none;
-}
-
-   nav .logo
-   {
-     display: none;
-   }
-  .navbar-brand
-   {
-     color: #fff;
-   }
-   nav ul{
+    }
+    nav .logo{
+      display: none;
+    }
+    .navbar-brand{
+      color: #fff;
+    }
+    nav ul{
      position: fixed;
      width: 100%;
      top: 7vh;
@@ -179,11 +149,8 @@ nav{
      text-align: center;
      line-height: 30px !important;
      color: #fff;
-     
-   }
+    }
    .dropdown-menu{
       background: #262626;
    }
 }
-
-
